tests/cases/compiler-development/artifact/errors/diagnostic-generic-function-pointer-uninferred.diagnostic
diagnostic error code=T0001 family=type message="generic type 'T' could not be inferred for function pointer 'keep'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-function-pointer-uninferred.ari" display="tests/cases/generics/errors/generic-function-pointer-uninferred.ari" bytes=105
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-function-pointer-uninferred.ari" line=6 column=28 end_line=6 end_column=32 byte_start=89 byte_end=93 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-function-pointer-uninferred.ari:6:28\n   |\n 6 |   let op: fn(i64) -> i64 = keep;\n   |                            ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/generics/errors/generic-function-pointer-uninferred.ari" line=1 column=9 end_line=1 end_column=10 byte_start=8 byte_end=9 message="generic parameter 'T' is not fixed by expected type fn(i64) -> i64"
  Snippet label=1 text="  --> tests/cases/generics/errors/generic-function-pointer-uninferred.ari:1:9\n   |\n 1 | fn keep[T](value: i64) -> i64 {\n   |         ^"
  Note index=0 location=none message="generic function values must be specialized before they can be stored as function pointers"
  Help index=0 location=none message="add a parameter or return position that mentions 'T', or use a non-generic helper for this function pointer type"
